--- a/templates/test.html
+++ b/templates/test.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html>
+{% extends '_base.html' %}
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous">
-</script>
-
-<p>New form</p>
+{% block main_content %}
+<h2>New graph</h2>
 {% from "_formhelpers.html" import render_field %}
 <form id="excel_form">
-  <dl>
-      {{ render_field(form.id_key) }}
-      {{ render_field(form.x_axis) }}
-      {{ render_field(form.hue_key) }}
-      {{ render_field(form.yellow_hline) }}
-      {{ render_field(form.red_hline) }}
-      {{ render_field(form.excel_field) }}
-      
-  </dl>
+    {% for field in form%}
+  <dl> {{render_field(field)}}</dl>
+    {% endfor %}
+
   <p><input type="submit" value="Genereate Table">
 </form>
 
@@ -55,9 +46,10 @@ id	value	time	key
 <p>SVG</p>
 <br>
 <div id="chart">Chart placeholder</div>
+{% endblock %}
 
-<script>
-    $SCRIPT_ROOT = {{request.script_root | tojson | safe}};
+{% block script %}
+$SCRIPT_ROOT = {{request.script_root | tojson | safe}};
     var data_tsv;
     var data_json;
 
@@ -67,8 +59,9 @@ id	value	time	key
         $.ajax({
             method: 'POST',
             url: {{url_for('excelpaste') | tojson}},
-            data: $(this).serialize()
-        }).done(addSvg);
+            data: $(this).serialize(),
+            success: addSvg
+        });
         var data = $('textarea[name=excel_data]').val();
         data_tsv = data;
         var rows = data.split("\n");
@@ -98,6 +91,5 @@ id	value	time	key
     }
 
     $('#excel_form').on('submit', generateTable);
-</script>
+{% endblock %}
 
-</html>
