--- a/templates/rcads.html
+++ b/templates/rcads.html
@@ -1,18 +1,34 @@
-<!DOCTYPE html>
-<html>
+{% extends '_base.html' %}
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous">
-</script>
+{% block main_content %}
 
-<p>New form</p>
+<h3>New form</h3>
+
+
 {% from "_formhelpers.html" import render_field %}
-<form id="sdq_form",  method="POST">
-  <dl>
-      {{ render_field(form.q1) }}
-      {{ render_field(form.q2) }}      
-  </dl>
-  <p><input type="submit" value="Genereate Table">
+<form id="rcads_form",  method="POST", action="/rcads">
+      {{ render_field(form.age) }}
+      {% for q in form.qs %}
+      <dt>{{ q.label }}</dt>
+      <dd>
+        <dt>{{q.score.label}}</dt>
+          <dd>{{ q.text()|safe }} {{ q.score()|safe }}
+            {% if q.text.errors %}
+            <ul class=errors>
+            {% for error in q.text.errors %}
+              <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
+          {% endif %}
+          {% if q.score.errors %}
+            <ul class=errors>
+            {% for error in q.score.errors %}
+              <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
+          {% endif %}      </dd>
+      {% endfor %}
+<input type="submit" value="Genereate Table">
 </form>
 
-</html>
+{% endblock %}
